# bluerepl

./: .gitignore  Cargo.toml  Commands.md  LICENSE  README.md
presets/: README.md  battery.toml  color.toml  hrs.toml  neopixel_controller.toml  nus.toml
src/: main.rs
src/bluetooth_numbers/: README.md  characteristic_uuids.json  characteristic_uuids.rs  company_ids.json  company_ids.rs  compare_uuid.rs  descriptor_uuids.rs  mod.rs  services_uuids.rs
src/controllers/: btleplug.rs  mod.rs  simpleble.rs
src/preset/: getters.rs  mod.rs  parser.rs  print.rs  run.rs  verify.rs
src/repl/: cli.rs  mod.rs
src/repl/commands/: clear.rs  connect.rs  disconnect.rs  indicate.rs  info.rs  mod.rs  notify.rs  read.rs  scan.rs  sleep.rs  unsubscribe.rs  write.rs
src/utils/: mod.rs  print_bytes.rs
src/uuid_translator/: ble_16_bits_uuids.json  mod.rs
