[package]
name = "bluerepl"
description = "A ble client running in the terminal"
version = "0.1.8"
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/Yohannfra/bluerepl"

[dependencies]
rustyline = "10.0.0"
btleplug = "0.10.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
exitcode = "1.1.2"
clap = { version = "3.2.16", features = ["derive"]}
async-trait = "0.1.57"
futures = "0.3.21"
tokio = { version = "1.24.2", features = ["full"] }
comfy-table = "6.1.0"
shlex = "0.1.1"
serde_json = "1.0"
bitflags = "1.3.2"
regex = "1"
str_to_bytes = "0.2.3"
lazy_static = "1.4.0"
pre-commit = "0.5.2"
rhexdump = "0.1.1"

[package.metadata.precommit]
fmt = "cargo fmt --check"
test = "cargo test"
clippy = "cargo clippy"
