[package]
name = "bluerepl"
description = "A ble client running in the terminal"
version = "0.1.8"
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/Yohannfra/bluerepl"

[dependencies]
rustyline = "15.0.0"
btleplug = "0.11.7"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
exitcode = "1.1.2"
clap = { version = "4.5.23", features = ["derive"]}
async-trait = "0.1.77"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
comfy-table = "7.1.3"
shlex = "1.3.0"
serde_json = "1.0.134"
bitflags = "2.6.0"
regex = "1.11.1"
str_to_bytes = "0.2.3"
lazy_static = "1.5.0"
pre-commit = "0.5.2"
rhexdump = "0.2.0"

[package.metadata.precommit]
fmt = "cargo fmt --check"
test = "cargo test"
clippy = "cargo clippy"
